# JerryEmail

./: README.md  build.gradle  gradle.properties  settings.gradle
SwitchButton/src/androidTest/java/com/jerry/switchbutton/: ExampleInstrumentedTest.java
SwitchButton/src/main/: AndroidManifest.xml
SwitchButton/src/test/java/com/jerry/switchbutton/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/release/: app-release.apk  output-metadata.json
app/src/androidTest/java/com/edu/cdp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/edu/cdp/adapter/: BaseAdapter.java  BaseViewHolder.java  JAdapter.java
app/src/main/java/com/edu/cdp/application/: JApplication.java
app/src/main/java/com/edu/cdp/base/: BaseActivity.java  BaseDialog.java  BaseFragment.java  BasePopupWindow.java
app/src/main/java/com/edu/cdp/bean/: Account.java  Constants.java  Contact.java  Email.java  EmailBox.java  LoginWay.java  MenuItem.java  Setting.java  Setting2.java
app/src/main/jni/: CMakeLists.txt  com_edu_cdp_jni_test.h  test.cpp
app/src/main/res/anim/: menu_bottombar_in.xml  menu_bottombar_out.xml  slide_in_from_left.xml  slide_in_from_right.xml  slide_in_left.xml  slide_out_to_left.xml  slide_out_to_right.xml
app/src/main/res/drawable/: button_sl.xml  contact_add_item_outline.xml  line_grey_round_shape.xml  loading_dialog_round_shape.xml  login_bottom_shape.xml  login_sl.xml  msg_num.xml  popmenu_shape.xml  textcursor_shape.xml  top_l_r_bottom_l_r_round_shape.xml  topbar_shape.xml  unlogin_sl.xml
app/src/main/res/layout/: accessory_d_layout.xml  account_layout.xml  activity_email.xml  activity_email_list.xml  activity_email_manager.xml  activity_general_settings.xml  activity_guide.xml  activity_home.xml  activity_login.xml  activity_loginway.xml  activity_manager_account.xml  activity_single_login.xml  activity_u_info.xml  add_account_layout.xml  confirm_dialog.xml  contact_add_item_layout.xml  contact_head_layout.xml  contact_layout.xml  contacts_pop_layout.xml  data_null_layout.xml  email_menu_layout.xml  fragment_web_view.xml  html_d_layout.xml  inbox_layout.xml  loading_dialog.xml  loginway_layout.xml  mail_box_layout.xml  mail_layout.xml  menu_item_layout.xml  permission_dialog.xml  pop_contact_item_layout.xml  popmenu_layout.xml  setting_layout.xml  setting_null_layout.xml  settinh_switch_layout.xml  single_mail_layout.xml  u_info_pop_layout.xml  user_info_bottom_dialog.xml  voice_d_layout.xml  voice_recycler_layout.xml  (+2 more)
app/src/main/res/values/: attrs.xml  strings.xml  styles.xml
app/src/test/java/com/edu/cdp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+74 files in other folders)
